# PMOD_rp2040

./: README.md
FT4222/FT4222_Source/: PMOD2USB-FT4222.kicad_pcb  PMOD2USB-FT4222.kicad_prl  PMOD2USB-FT4222.kicad_pro  PMOD2USB-FT4222.kicad_sch
HV_Pulser/: Readme.md
HV_Pulser/checks/: loaded.CSV  unloaded.CSV
HV_Pulser/firmware/: CMakeLists.txt  main.c
HV_Pulser/firmware/adc/: adc.c  adc.h
PSRAM/PMOD2PSRAM(20240219)/: PMOD2PSRAM.kicad_prl  PMOD2PSRAM.kicad_pro  PMOD2PSRAM.kicad_sch
R2R_DAC/: Readme.md
R2R_DAC/firmware/: CMakeLists.txt  main.c
R2R_DAC/firmware/adc/: adc.h
R2R_DAC/firmware/csv/: csv.c  csv.h
